--- a/public/style/app.css
+++ b/public/style/app.css
@@ -1,5 +1,5 @@
 :root {
-    --app-background: #25c0ca;
+    --app-background: linear-gradient(37deg, rgba(68, 79, 217, 0.85), rgba(133, 66, 173, 0.89));;
     --bar-color: #5e31d3;
 }
 
