--- a/public/style/canvas.css
+++ b/public/style/canvas.css
@@ -2,12 +2,11 @@
 #canvas {
     display: flex;
     flex-direction: row;
-    margin: 10px;
     width: 100%;
     height: 90vh;
 }
-.array{
-    margin: 10px;
+
+.array {
     display: flex;
     width: 100%;
     height: 80vh;
@@ -16,8 +15,8 @@
     align-items: end;
 }
 
-.bar{
-    margin: 5px;
+.bar {
+    margin-left: 5px;
     width: 20px;
     height: 500px;
     background: var(--bar-color);
