--- a/public/style/canvas.css
+++ b/public/style/canvas.css
@@ -1,23 +1,9 @@
 
 #canvas {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 90vh;
-}
-
-.array {
-    display: flex;
-    width: 100%;
-    height: 80vh;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-items: end;
-}
-
-.bar {
-    margin-left: 5px;
-    width: 20px;
-    height: 500px;
-    background: var(--bar-color);
+    width: 100%;
+    height: 93vh;
 }
