--- a/public/style/app.css
+++ b/public/style/app.css
@@ -1,9 +1,9 @@
 :root {
     --app-background: linear-gradient(37deg, rgba(109, 156, 213, 0.85), rgba(152, 80, 197, 0.89));;
     --bar-color: #00ffff;
-    --color-success: #6aff6a;
-    --color-failure: #e65524;
-    --color-info: #7b5ddc;
+    --color-success: #00ff00;
+    --color-failure: #ff0000;
+    --color-info: #0000ff;
 }
 
 * {
